--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,22 +13,23 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-    
-    <div class="jumbotron text-center">
-      <div class="container">
-	<a href="/" class="lang-logo">
-	  <img src="/lang-logo.png">
-	</a>
-	<h1>Zalim Man You Know</h1>
-	<p> yeah this is what it's alll about
-	  .</p>
-	<a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	  Getting Started with Node
-	</a>
-	<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	  <span class="glyphicon glyphicon-download"></span>
-	  Source on GitHub
-	</a>
+    <div class = "content">
+      <div class="jumbotron text-center">
+	<div class="container">
+	  <a href="/" class="lang-logo">
+	    <img src="/lang-logo.png">
+	  </a>
+	  <h1>Zalim Man You Know</h1>
+	  <p> yeah this is what it's alll about
+	    .</p>
+	  <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+	    Getting Started with Node
+	  </a>
+	  <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+	    <span class="glyphicon glyphicon-download"></span>
+	    Source on GitHub
+	  </a>
+	</div>
       </div>
     </div>
     
