--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
-    <div class = "content">
+   <!-- <div class = "content">-->
       <div class="jumbotron text-center">
 	<div class="container">
 	  <a href="/" class="lang-logo">
@@ -31,7 +31,7 @@
 	  </a>
 	</div>
       </div>
-    </div>
+    <!--</div>-->
     
     
   </body>
