--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,7 +33,7 @@ ul.sidenav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 17%;
     background-color: #f1f1f1;
     position: fixed;
     height: 100%;
@@ -58,7 +58,7 @@ ul.sidenav li a:hover:not(.active) {
 }
 
 div.content {
-    margin-left: 25%;
+    margin-left: 17%;
     padding: 1px 16px;
     height: 1000px;
 }
@@ -130,4 +130,4 @@ footer ul {
 footer li img {
     width: 32px;
     height: 32px;
-}
+}BB
