--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <!--<% include ../partials/header.ejs %>-->
+    <!--<% include ../partials/header.ejs %>-->
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
   </head>
   <body>
     
