--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,16 +5,29 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
   </head>
   <body>
-    
-    <!--<% include ../partials/nav.ejs %>-->
 
-    <ul class="sidenav">
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
-   <div class = "content">
+    <header class="container">
+      <div class="row">
+	<h1 class="col-sm-4">Skillfair</h1>
+	<nav class="col-sm-8 text-right">
+	  <p>newest</p>
+	  <p>catalogue</p>
+	  <p>contact</p>
+	</nav>
+      </div>
+      </header>
+    
+    <section class="jumbotron">
+      <div class="container">
+	<div class="row text-center">
+	  <h2>Homemade Goods</h2>
+	  <h3>This Year's Best</h3>
+	  <a class="btn btn-primary" href="#" role="button">See all</a>
+	</div>
+      </div>
+      </section>
+    <!--<% include ../partials/nav.ejs %>-->
+    <div class = "content">
       <div class="jumbotron text-center">
 	<div class="container">
 	  <a href="/" class="lang-logo">
@@ -31,7 +44,38 @@
 	    Source on GitHub
 	  </a>
 	</div>
+	
       </div>
+    </div>
+
+    <div id="container" style="width:100%; height:400px;">
+      <script>
+	$(function () {
+	   $('#container').highcharts({
+	      chart: {
+	         type: 'bar'
+	      },
+	      title: {
+	         text: 'Fruit Consumption'
+	      },
+	      xAxis: {
+	         categories: ['Apples', 'Bananas', 'Oranges']
+	      },
+	      yAxis: {
+	         title: {
+	            text: 'Fruit eaten'
+	         }
+	      },
+	      series: [{
+	         name: 'Jane',
+	         data: [1, 0, 4]
+	      }, {
+	         name: 'John',
+	         data: [5, 7, 3]
+	      }]
+ 	    });
+	});
+      </script>
     </div>
     
     
