--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -49,7 +49,7 @@
     </div>
 
     <div id="container" style="width:100%; height:400px;">
-      <script>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"  type="text/javascript">
 	$(function () {
 	   $('#container').highcharts({
 	      chart: {
