highcharts still not working on heroku

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -131,7 +131,7 @@
 
     <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
     <script language="JavaScript">
-      $(document).ready(function() {
+      $(function() {
       	var title = {
       		text: 'Monthly Average Temperature'
       	};
