--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
     <script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
-
+    <script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
     
   </head>
   <body>
@@ -197,8 +197,10 @@
       	json.legend = legend;
       	json.series = series;
 
-      	$('#container').highcharts(json);
+      $('#container').highcharts(json);
+      console.log($('#container').highcharts(json));
       	});
     </script>
   </body>
 </html>
+B
