--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,10 +7,10 @@
     <!--<script src="/jquery/jquery.min.js"></script>-->
     <!-- import HighCharts  -->
     <!--<script src="/highcharts/highcharts.js"></script>-->
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-    <script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
-    <script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://code.highcharts.com/highcharts.js" type="text/javascript"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
+    <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     
   </head>
   <body>
@@ -59,7 +59,7 @@
 
     <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
     <script language="JavaScript">
-	$(function () {
+	$(document).ready(function () {
     $('#container').highcharts({
         title: {
             text: 'Monthly Average Temperature',
