--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,40 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--<% include ../partials/header.ejs %>-->
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-    <!-- import jquery  -->
-    <!--<script src="/jquery/jquery.min.js"></script>-->
-    <!-- import HighCharts  -->
-    <!--<script src="/highcharts/highcharts.js"></script>-->
+    <% include ../partials/header.ejs %>
+    <!--<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+
     <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="https://code.highcharts.com/highcharts.js" type="text/javascript"></script>
     <script src="https://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
-    <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>-->
     
   </head>
   <body>
     
-    <header class="container">
-      <div class="row">
-	<h1 class="col-sm-4">Ment2Reach</h1>
-	<nav class="col-sm-8 text-right">
-	  <p>newest</p>
-	  <p>catalogue</p>
-	  <p>contact</p>
-	</nav>
-      </div>
+    <header>
+      <nav>
+	<ul>
+	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">Ment2Reach</h1></a></li>
+	  <li><a href="#">About</a></li>
+	  <li><a href="#">Contact</a></li>
+	</ul>
+      </nav>
     </header>
-    
-    <section class="jumbotron">
-      <div class="container">
-	<div class="row text-center">
-	  <h2>Homemade Goods</h2>
-	  <h3>This Year's Best</h3>
-	  <a class="btn btn-primary" href="#" role="button">See all</a>
-	</div>
-      </div>
-      </section>
+
+    <div>
+    <p id = "topDiv">Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
+    </div>
     <!--<% include ../partials/nav.ejs %>-->
     <div class = "content">
       <div class="bike text-center">
