--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,69 +21,63 @@
 	</ul>
       </nav>
     </header>
+    
 
-    <div>
-    <p id = "topDiv">Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
+    <div class="topDiv">
+      <p>Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
     </div>
     <!--<% include ../partials/nav.ejs %>-->
-    <div class = "content">
-      <div class="bike text-center">
-	<div class="container">
-	  <a href="/" class="lang-logo">
-	    <img src="/lang-logo.png">
-	  </a>
-	  <h1>Zalim Man You Know</h1>
-	  <p> yeah this is what it's alll about
-	    .</p>
-	  <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	    Getting Started with Node
-	  </a>
-	  <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	    <span class="glyphicon glyphicon-download"></span>
-	    Source on GitHub
-	  </a>
-	</div>
-	
-      </div>
-      <div class="rose text-center">
-	<div class="container">
-	  <a href="/" class="lang-logo">
-	    <img src="/lang-logo.png">
-	  </a>
-	  <h1>Whooooooaaaa</h1>
-	  <p> yeah this is what it's alll about
-	    .</p>
-	  <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	    Getting Started with Node
-	  </a>
-	  <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	    <span class="glyphicon glyphicon-download"></span>
-	    Source on GitHub
-	  </a>
-	</div>
-	
-      </div>
-      <div class="grass text-center">
-	<div class="container">
-	  <a href="/" class="lang-logo">
-	    <img src="/lang-logo.png">
-	  </a>
-	  <h1>Whooooooaaaa</h1>
-	  <p> yeah this is what it's alll about
-	    .</p>
-	  <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	    Getting Started with Node
-	  </a>
-	  <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	    <span class="glyphicon glyphicon-download"></span>
-	    Source on GitHub
-	  </a>
-	</div>
-	
+    <div>
+      <h1>Zalim Man You Know</h1>
+      <p> yeah this is what it's alll about.</p>
+      <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+	Getting Started with Node
+      </a>
+      <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+	<span class="glyphicon glyphicon-download"></span>
+	Source on GitHub
+      </a>
+    </div>
+    
+    <div class="rose text-center">
+      <div class="container">
+	<a href="/" class="lang-logo">
+	  <img src="/lang-logo.png">
+	</a>
+	<h1>Whooooooaaaa</h1>
+	<p> yeah this is what it's alll about
+	  .</p>
+	<a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+	  Getting Started with Node
+	</a>
+	<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+	  <span class="glyphicon glyphicon-download"></span>
+	  Source on GitHub
+	</a>
       </div>
     </div>
     
-    
+    <div class="grass text-center">
+      <div class="container">
+	<a href="/" class="lang-logo">
+	  <img src="/lang-logo.png">
+	</a>
+	<h1>Whooooooaaaa</h1>
+	<p> yeah this is what it's alll about
+	  .</p>
+	<a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+	  Getting Started with Node
+	</a>
+	<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+	  <span class="glyphicon glyphicon-download"></span>
+	  Source on GitHub
+	</a>
+      </div>
+      
+    </div>
+
+
+
     <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
     <script language="JavaScript">
 	$(document).ready(function () {
