--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,12 +14,15 @@ ul {
 
 li {
     float: left;
+    margin: 0;
+    padding: 0;
 }
 
 li a {
     display: block;
     color: white;
     text-align: center;
+    margin:0;
     padding: 14px 16px;
     text-decoration: none;
 }
@@ -33,6 +36,8 @@ body {
     font-family: Futura, serif;
     padding:0;
     margin: 0;
+    margin-top: 0;
+    padding-top: 0;
     text-align: center;
 }
 
@@ -69,4 +74,6 @@ h2 {
     height: 500px;
     background-color:#64B3DF;
     color: white;
+    margin: 0;
+    padding: 0;
 }
