--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     
-    <header>
+    <!--<header>-->
       <nav>
 	<ul>
 	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">Ment2Reach</h1></a></li>
@@ -20,12 +20,16 @@
 	  <li><a href="#">Contact</a></li>
 	</ul>
       </nav>
-    </header>
-    
+    <!--</header>-->
 
-    <div class="topDiv">
-      <p>Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
-    </div>
+    <p class = "topDiv">Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>  
+    
+    <!--<section class = "topDiv">
+      <div>
+	<p>Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
+      </div>
+    </section>-->
+    
     <!--<% include ../partials/nav.ejs %>-->
     <div>
       <h1>Zalim Man You Know</h1>
