--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     
-    <!--<header>-->
+    <header>
       <nav>
 	<ul>
 	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">Ment2Reach</h1></a></li>
@@ -20,10 +20,13 @@
 	  <li><a href="#">Contact</a></li>
 	</ul>
       </nav>
-    <!--</header>-->
-
-    <p class = "topDiv">Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>  
-    
+    </header>
+    <div class = "topDiv">
+      <p class = "topP">
+	Helping Student Athletes Achieve Maximum Athletic and Academic Potential
+      </p>
+    </div>
+   
     <!--<section class = "topDiv">
       <div>
 	<p>Helping Student Athletes Achieve Maximum Athletic and Academic Potential </p>
