--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,13 +14,23 @@ ul {
 
 li {
     float: left;
-    margin: 0;
+    margin: 10px 10px;
     padding: 0;
 }
 
 li a {
     display: block;
     color: white;
+    text-align: center;
+    margin:0;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a.signUp {
+    display: block;
+    color: #64B3DF;
+    background-color: white;
     text-align: center;
     margin:0;
     padding: 14px 16px;
@@ -36,11 +46,10 @@ body {
     font-family: Futura, serif;
     padding:0;
     margin: 0;
-    margin-top: 0;
-    padding-top: 0;
     text-align: center;
     display: flex;
     flex-direction: column;
+    max-width:100%;
 }
 
 h1 {
@@ -65,6 +74,20 @@ h1 {
     padding: 2px 16px;
 }
 
+#loginli {
+    margin:10px 10px;
+    padding: 0;
+    float:right;
+    color: white;
+    background-color: #64B3DF;
+}
+
+#signupli {
+    margin:10px 10px;
+    padding: 0;
+    float:right;
+}
+
 h2 {
     color: #ffffff;
     font-size: 56px;
@@ -77,10 +100,11 @@ h2 {
     color: white;
     margin: 0;
     padding: 0;
+    background-image:url(http://www.biblestudynote.com/wp-content/uploads/2015/09/london-2012-summer-olympic-games-womens-100m-dash.jpg)
 }
 
 .topP {
     font-size: 70px;
-    width: 50%;
-    padding: 0px 350px;
+    width: 70%;
+    padding: 0px 220px;
 }
