--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,6 +18,8 @@
 	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">Ment2Reach</h1></a></li>
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
+	  <li id="signupli"><a class="signUp" href="#">Sign Up</a></li>
+	  <li id="loginli"><a href="#">Log In</a></li>
 	</ul>
       </nav>
     </header>
