first attempt at login page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
 	  <li id="signupli"><a class="signUp" href="#">Sign Up</a></li>
-	  <li id="loginli"><a href="#">Log In</a></li>
+	  <li id="loginli"><a href="/loginpage">Log In</a></li>
 	</ul>
       </nav>
     </header>
@@ -48,45 +48,6 @@
       </a>
     </div>
     
-    <div class="rose text-center">
-      <div class="container">
-	<a href="/" class="lang-logo">
-	  <img src="/lang-logo.png">
-	</a>
-	<h1>Whooooooaaaa</h1>
-	<p> yeah this is what it's alll about
-	  .</p>
-	<a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	  Getting Started with Node
-	</a>
-	<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	  <span class="glyphicon glyphicon-download"></span>
-	  Source on GitHub
-	</a>
-      </div>
-    </div>
-    
-    <div class="grass text-center">
-      <div class="container">
-	<a href="/" class="lang-logo">
-	  <img src="/lang-logo.png">
-	</a>
-	<h1>Whooooooaaaa</h1>
-	<p> yeah this is what it's alll about
-	  .</p>
-	<a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	  Getting Started with Node
-	</a>
-	<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	  <span class="glyphicon glyphicon-download"></span>
-	  Source on GitHub
-	</a>
-      </div>
-      
-    </div>
-
-
-
     <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
     <script language="JavaScript">
 	$(document).ready(function () {
