--- a/views/pages/loginpage.ejs
+++ b/views/pages/loginpage.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <% include ../partials/header.ejs %>
-      <!--<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-	  
-	  <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-          <script src="https://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-	  <script src="https://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
-	  <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>-->
-      
+      <link rel="stylesheet" type="text/css" href="/stylesheets/loginpage.css" />      
   </head>
   <body>
+    <div class="loginForm">
+      <form name="login" action="index_submit" method="get" accept-charset="utf-8">
+	<ul>
+	  <li><label for="usermail">Email</label>
+	    <input type="email" name="usermail" placeholder="email" required></li>
+	  <li><label for="password">Password</label>
+	    <input type="password" name="password" placeholder="password" required></li>
+	  <li>
+	    <input type="submit" value="Login"></li>
+	</ul>
+      </form>
+    </div>
   </body>
 </html>
