--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -22,9 +22,14 @@
     </script>
   </head>
   <body>
+  
 
+
+    <!-- chart 1-->
+    <div id="dailyTotalChart" style="width: 550px; height: 400px; margin: 0 auto"></div>
+    <div id="overallFeelingChart" style="width: 550px; height: 400px; margin: 0 auto"></div>
     
-    <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
+    
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <script>
       // Initialize Firebase
@@ -92,9 +97,29 @@
 		return newDate;
 	  }
 	  
-	  function setChart(chartTitle, yAxisTitle, xAxisPoints, dataTitle, dataPoints) {
+	  function setChart(chartID, chartTitle, yAxisTitle, xAxisPoints, dataTitles, dataPointSeries) {
+	  	var hashtagString = "#";
+	  	var containerID = hashtagString.concat(chartID);
+	  	console.log(containerID);
+	  	
+	  	var seriesList = []
+	  	for (index in dataTitles) {
+	  		var title = dataTitles[index];
+	  		var data = dataPointSeries[index];
+	  		console.log(title);
+	  		console.log(data);
+	  		seriesList.push({name: title,
+	  						 series: data});
+	  	}
+	  	console.log("series list 1");
+	  	console.log(seriesList);
+	  
 	  	$(document).ready(function () {
-      			$('#container').highcharts({
+	  			
+	  			console.log("series list 2");
+	  			console.log(seriesList);
+	  	
+      			$(containerID).highcharts({
       			credits: false,
       				title: {
       					text: chartTitle,
@@ -122,10 +147,12 @@
       					verticalAlign: 'middle',
       					borderWidth: 0
       				},
-     				 series: [{
-      						name: dataTitle,
-      						data: dataPoints
-      				}]
+     				series: [
+     					{
+     						name: dataTitles,
+     						data: dataPointSeries
+     					}
+     				]
       			});
       		});
 	  }
@@ -135,6 +162,12 @@
 	  var convertedDates = [];
 	  var dates = [];
 	  var dailyTotalList = [];
+	  var overallFeelingList = [];
+	  var breakfastScoreList = [];
+	  var lunchScoreList = [];
+	  var dinnerScoreList = [];
+	  var studyingScoreList = [];
+	  var trainingScoreList = [];
 
 	  BASE_REF.on('value', function(snapshot) {
       	console.log(snapshot.val());
@@ -166,10 +199,16 @@
 				console.log(date);
 				var scoresDict = valDict[date]["scores"];
 				dailyTotalList.push(scoresDict["daily total score"]);
+				overallFeelingList.push(scoresDict["overall feeling score"]);
+				breakfastScoreList.push(scoresDict["breakfast score"]);
+				lunchScoreList.push(scoresDict["lunch score"]);
+				dinnerScoreList.push(scoresDict["dinner score"]);
+				studyingScoreList.push(scoresDict["studying score"]);
+				trainingScoreList.push(scoresDict["training score"]);
 			}
-			console.log(dailyTotalList);
 			
-			setChart("Daily Score Totals", "Scores", dates, "daily total", dailyTotalList)
+			setChart("dailyTotalChart","Daily Score Totals", "Scores", dates, "daily total", dailyTotalList);
+			setChart("overallFeelingChart","Overall Feeling Scores", "Scores", dates, "overall feeling", overallFeelingList);
 			
       	}
       });
