--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -42,17 +42,17 @@
       firebase.initializeApp(config);
     </script>
     <script>
-      var email = "kawarrier@yahoo.com"
-      var password = "kawarrier"
+      //var email = "kawarrier@yahoo.com"
+      //var password = "kawarrier"
       
-      firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+      /*firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
       // Handle Errors here.
       	var errorCode = error.code;
       	var errorMessage = error.message;
       	window.alert(errorCode);
       	console.log(errorCode);
       	console.log(errorMessage);
-      });
+      });*/
 
       var BASE_REF = firebase.database().ref();
 
