--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -36,6 +36,17 @@ button {
     cursor: pointer;
     width: 100px;
     text-align:center;
+    
+    
+    background-color: black;
+    color: white;
+    font-size: 15px;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    text-align:center;
 }
 
 .cancelbtn {
@@ -49,20 +60,13 @@ button {
     margin: 24px 0 12px 0;
 }
 
-img.avatar {
-    width: 40%;
-    border-radius: 50%;
-}
 
 .container {
     padding: 16px;
     margin: auto;
 }
 
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
+
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
@@ -74,3 +78,4 @@ span.psw {
 	width: 100%;
     }
 }
+
