--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,9 +16,11 @@
 	</ul>
       </nav>
     </header>
-    <div class = "topDiv">
+    <!--<div class="parallax"><div>-->
+    <!--<div class="parallax2"><div>-->
+    <div class = "parallax">
       <p class = "topP">
-	Helping Student Athletes Achieve Maximum Athletic and Academic Potential
+		Helping Student Athletes Achieve Maximum Athletic and Academic Potential
       </p>
     </div>
    
@@ -29,17 +31,52 @@
     </section>-->
     
     <!--<% include ../partials/nav.ejs %>-->
-    <div>
-      <h1>Zalim Man You Know</h1>
-      <p> yeah this is what it's alll about.</p>
-      <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-	Getting Started with Node
-      </a>
-      <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-	<span class="glyphicon glyphicon-download"></span>
-	Source on GitHub
-      </a>
+    <div class="parallax2">
+      <h1>parralax 2</h1>
+      <p> </p>
+
+    	<h1>header 1</h1>
+     	 <p> paragraph</p>
+     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+				link to node
+     		 </a>
+      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+				<span class="glyphicon glyphicon-download"></span>
+				link to github
+      		</a>
     </div>
+    
+    <div class="parallax3">
+      <h1>parallax 3</h1>
+      <p> this paragraph</p>
+
+    	<h1>I used to get money</h1>
+     	 <p> the paragraph</p>
+     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+				link to node
+     		 </a>
+      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+				<span class="glyphicon glyphicon-download"></span>
+				link to github
+      		</a>
+    </div>
+    
+ 	<div class="parallax4">
+      <h1>parallax 4</h1>
+      <p>the paragraph is here</p>
+
+    	<h1>The header</h1>
+     	 <p> paragraphing</p>
+     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
+				lining
+     		 </a>
+      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
+				<span class="glyphicon glyphicon-download"></span>
+				link
+      		</a>
+    </div>
+
+
 
   </body>
 </html>
